--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,85 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.jumbotron{
+  height: 100px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cont{
+  width: 85%;
+  margin: 0px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+img {
+  height: 200px;
+  width: 100%;
+  margin-bottom: 0px
+
+}
+
+.logo{
+  float: left;
+  margin: 0;
+  
+}
+
+
+.card{
+  margin-bottom: 30px;
+  
+}
+
+.cart-total{
+  width: 200px;
+  padding: 10px 20px;
+  margin: 30px auto;
+  
+
+}
+
+.trow{
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px 0px;
+  }
+
+.tableCont{
+  width: 50%;
+  margin: 35px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-wide{
+  width: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td, th{
+  height: 60px;
+  width: 100px;
+  text-align: right;
 }
+
+.navbar-brand{
+  font-weight: 1200px;
+  letter-spacing: 0.1em;
+  border-radius: 5px;
+  background-color: yellow;
+
+}
+
+.floatleft{
+  
+  float: left;
+  padding: 0px;
+  margin-top: 7px;
+  justify-content: center;
+ }
+
+.floatright{
+  
+ float: right;
+ padding: 0px;
+ margin-top: 7px;
+ justify-content: center;
+}
+
